Syntax fixes, plug in waterline-schema.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "node-noop": "0.0.1",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "terminus": "^1.0.9",
+    "waterline-schema": "^0.1.7"
   }
 }
