--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-noop": "0.0.1",
     "lodash": "^2.4.1",
     "terminus": "^1.0.9",
-    "waterline-schema": "^0.1.7"
+    "waterline-schema": "^0.1.7",
+    "merge-defaults": "^0.1.0"
   }
 }
