--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^2.4.1",
     "terminus": "^1.0.9",
     "waterline-schema": "^0.1.7",
-    "merge-defaults": "^0.1.0"
+    "merge-defaults": "^0.1.0",
+    "async": "^0.7.0"
   }
 }
