--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "terminus": "^1.0.9",
     "waterline-schema": "^0.1.7",
     "merge-defaults": "^0.1.0",
-    "async": "^0.7.0"
+    "async": "^0.7.0",
+    "waterline-criteria": "^0.10.3"
   }
 }
