--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "~2.4.1",
     "merge-defaults": "~0.1.0",
     "waterline-criteria": "~0.10.3",
-    "waterline-schema": "~0.1.7"
+    "waterline-schema": "~0.1.7",
+    "semver": "~2.3.0"
   },
   "optionalDependencies": {
     "node-switchback": "~0.1.0",
